ncap/Ifc58/include/IFCAPI.H

HIFCGRAB IFCCALL CICamera_Grab_HostBufListEx(CICamera *pCamera, DWORD dwOptions, pBYTE dest[], int ringNumFrames,int totalNumFrames, short x, short y, short dx, short dy);
BOOL IFCCALL CICamera_TrigRead(CICamera *pCamera,short x, short y, short dx, short dy, pBYTE dest);
BOOL IFCCALL CICamera_WaitTrig(CICamera *pCamera,long waitTime);
BOOL IFCCALL CICamera_TrigSnap(CICamera *pCamera,DWORD trigSource);
BOOL IFCCALL CICamera_StartTrigOps(CICamera *pCamera);
BOOL IFCCALL CICamera_StopTrigOps(CICamera *pCamera);
BOOL IFCCALL CICamera_SetZoom(CICamera *pCamera,float xZoom, float yZoom);
void IFCCALL CICamera_GetZoomCaps(CICamera *pCamera,LPZOOMCAP lpCaps);
BOOL IFCCALL CICamera_ReadArea (CICamera *pCamera,short x,short y,short dx,short dy,BYTE *destadr,DWORD dest_dx,DWORD readOptions );
void IFCCALL CICamera_LineReverseRead (CICamera *pCamera,short x,short y,short dx,short dy,short destlinebytes, BYTE *destadr, DWORD readOptions);
void IFCCALL CICamera_ReadDestPitchArea (CICamera *pCamera,short x,short y,short dx,short dy, short destlinebytes, DWORD physdest, DWORD readOptions);
void IFCCALL CICamera_GetAttr(CICamera *pCamera,LPCAM_ATTR lpAttr, BOOL zoomCorrected);
void IFCCALL CICamera_GetReadCaps(CICamera *pCamera,LPREADCAP lpCaps);
void IFCCALL CICamera_SetReadColorRemap(CICamera *pCamera,BOOL bEnabled);
DWORD IFCCALL CICamera_ReadReg(CICamera *pCamera,REGID reg);
void IFCCALL CICamera_WriteReg(CICamera *pCamera,REGID reg, DWORD val);
BOOL IFCCALL CICamera_UpdateParamFromCfg(CICamera *pCamera,CConfig *cfg,IFC_PARAM_KIND parmType,DWORD numVals,double *paramVal);
BOOL IFCCALL CICamera_WriteParamToCfg(CICamera *pCamera,CConfig *cfg, IFC_PARAM_KIND parmType, DWORD numVals, double *paramVal);
BOOL IFCCALL CICamera_WriteUartCommand(CICamera *pCamera, BYTE *cmd,DWORD numBytes, DWORD uartIndex);
BOOL IFCCALL CICamera_ReadUartCommand(CICamera *pCamera, BYTE *cmd,DWORD numBytesToRead, DWORD *numBytesRead,DWORD uartIndex);
BOOL IFCCALL CICamera_UartCommandResponse(CICamera *pCamera, BYTE *cmd,DWORD numCmdBytes,BYTE *response,DWORD numBytesToRead, DWORD *numBytesRead,DWORD uartIndex);
BOOL IFCCALL CICamera_TransformSupported(CICamera *pCamera,IFC_TRANSFORM_TYPE eTransform);
BOOL IFCCALL CICamera_SetTransform(CICamera *pCamera,IFC_TRANSFORM_TYPE eTransform);
IFC_TRANSFORM_TYPE IFCCALL CICamera_GetCurrentTransform(CICamera *pCamera);
DWORD IFCCALL CICamera_GetPortNum(CICamera *pCamera);
ACQ_PARAMS_TYPE IFCCALL CICamera_GetParamAlias(CICamera *pCamera, ACQ_PARAMS_TYPE paramID);