ncap/Ifc58/examples/VB/Ifcapi.bas


Declare Function CICamera_TrigRead Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal x As Integer, ByVal y As Integer, ByVal dx As Integer, ByVal dy As Integer, ByRef dest As Byte) As Integer
Declare Function CICamera_WaitTrig Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal waitTime As Long) As Integer
Declare Function CICamera_TrigSnap Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal trigSource As Long) As Integer
Declare Function CICamera_StartTrigOps Lib "ifcapi.dll" (ByVal pCamera As Long) As Integer
Declare Function CICamera_StopTrigOps Lib "ifcapi.dll" (ByVal pCamera As Long) As Integer
Declare Function CICamera_SetZoom Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal xZoom As Single, ByVal yZoom As Single) As Integer
'Declare Sub CICamera_GetZoomCaps lib "ifcapi.dll" (ByVal pCamera As Long,LPZOOMCAP lpCaps)
Declare Function CICamera_ReadArea Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal x As Integer, ByVal y As Integer, ByVal dx As Integer, ByVal dy As Integer, ByRef destadr As Byte, ByVal dest_dx As Long, ByVal readOptions As Long) As Integer
Declare Sub CICamera_LineReverseRead Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal x As Integer, ByVal y As Integer, ByVal dx As Integer, ByVal dy As Integer, ByVal destlinebytes As Integer, ByRef destadr As Byte, ByVal readOptions As Long)
Declare Sub CICamera_ReadDestPitchArea Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal x As Integer, ByVal y As Integer, ByVal dx As Integer, ByVal dy As Integer, ByVal destlinebytes As Integer, ByVal physdest As Long, ByVal readOptions As Long)
Declare Sub CICamera_GetAttr Lib "ifcapi.dll" (ByVal pCamera As Long, ByRef lpAttr As CAM_ATTR, ByVal zoomCorrected As Boolean)
'Declare Sub CICamera_GetReadCaps lib "ifcapi.dll" (ByVal pCamera As Long,LPREADCAP lpCaps)
Declare Sub CICamera_SetReadColorRemap Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal bEnabled As Boolean)
Declare Function CICamera_ReadReg Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal reg As Long) As Long
Declare Sub CICamera_WriteReg Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal reg As Long, ByVal val As Long)
'Declare Function CICamera_UpdateParamFromCfg lib "ifcapi.dll" (ByVal pCamera As Long,ByVal cfg As Long,IFC_PARAM_KIND parmType,ByVal numVals As Long,ByRef  paramVal As Double) As Integer
'Declare Function CICamera_WriteParamToCfg lib "ifcapi.dll" (ByVal pCamera As Long,ByVal cfg As Long, IFC_PARAM_KIND parmType, ByVal numVals As Long, ByRef  paramVal As Double) As Integer
Declare Function CICamera_WriteUartCommand Lib "ifcapi.dll" (ByVal pCamera As Long, ByRef cmd As Byte, ByVal numBytes As Long, ByVal uartIndex As Long) As Long
Declare Function CICamera_ReadUartCommand Lib "ifcapi.dll" (ByVal pCamera As Long, ByRef cmd As Byte, ByVal numBytesToRead As Long, ByRef numBytesRead As Long, ByVal uartIndex As Long) As Long
Declare Function CICamera_UartCommandResponse Lib "ifcapi.dll" (ByVal pCamera As Long, ByRef cmd As Byte, ByVal numCmdBytes As Long, ByRef response As Byte, ByVal numBytesToRead As Long, ByRef numBytesRead As Long, ByVal uartIndex As Long) As Long
Declare Function CICamera_Grab_HostBufListEx Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal dwOptions As Long, ByRef dests As Long, ByVal ringNumFrames As Long, ByVal totalNumFrames As Long, ByVal x As Long, ByVal y As Long, ByVal dx As Long, ByVal dy As Long) As Long
Declare Function CICamera_GetCurrentTransform Lib "ifcapi.dll" (ByVal pCamera As Long) As Long
Declare Function CICamera_GetParamAlias Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal paramID As Long) As Long
Declare Function CICamera_GetPortNum Lib "ifcapi.dll" (ByVal pCamera As Long) As Long
Declare Sub CICamera_LutPassMostSigBits Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal lutID As LUTID_TYPE, ByVal lutPortion As LUT_PORTION_TYPE, ByVal numBitsToPass As Long)
Declare Function CICamera_SetTransform Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal eTransform As IFC_TRANSFORM_TYPE) As Long
Declare Function CICamera_TransformSupported Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal eTransform As IFC_TRANSFORM_TYPE) As Long

